--- a/Fish/css/mainStyle.css
+++ b/Fish/css/mainStyle.css
@@ -16,9 +16,15 @@ body{
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	z-index: 1;
+	z-index: 2;
 }
 #canvas2{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	z-index: 1;
+}
+#canvas3{
 	position: absolute;
 	bottom: 0;
 	left: 0;
